fix WS url, fix line wrap, simplify rendering

--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ html, body{
     font-size: 1.3em;
     background-color: #2e3436;
     color: #d3d7cf;
+    white-space: pre-wrap;
 }
 
 #input input {
